sample/errors/sample_0b.nev

func A(a : int, a : int) -> int
{
    0
}

func main() -> int
{
    0
}